feat: addproduct 제작 #5 navbar 리팩토링

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="kr">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -8,7 +8,7 @@
     <title>lensis admin page</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div class="min-w-[900px]" id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
