--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
   <body>
     <div class="min-w-[900px]" id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script>
+      if (global === undefined) {
+        var global = window
+      }
+    </script>
   </body>
 </html>
